# may-experiment

./: .gitignore  Makefile  README.md  experiments.json  experiments.py  experiments.txt  llmaas.py  pyproject.toml  requirements.txt  simple_results_analysis.py  test_counts.json  train_counts.json
archives/medical_small/: config.txt  prepare_dataset.py  prepare_sample.py
medical_extended/: configs.txt  evaluation.py  experiments.py  experiments.txt  finetuning.py  llmaas.py  prepare_dataset.py  prepare_sample.py  sample.jsonl  sampling.py  test_ds.jsonl
medical_small/: finetuning.py  sample.jsonl  test_ds.jsonl  train_ds.jsonl
results/: evaluation_on_18814_events.json  evaluation_on_28221_events.json  evaluation_on_37628_events.json  evaluation_on_47035_events.json  evaluation_on_56442_events.json  evaluation_on_65849_events.json  evaluation_on_75256_events.json  evaluation_on_9407_events.json  ft_1431b366504f975ce2020663350ce9b4_sample_ef16cc343ccac5fd82fc3628cc944538.json  ft_297dba617c45c9369cf30009b93f91f0_sample_9b6c2f081a328ab1767c3a96db05ada7.json  ft_33b448af9449af70e4f78f62ce2630fd_sample_e9129c21a53ab508831711d18aba90e0.json  ft_5fdef41c173dea35e960b94632849039_sample_b8b4c726c457d3283d68d30c44ac3735.json  ft_6c1aabfaa9905f56284750a80c2f0572_sample_a90377b78a0dfc14393d1536a0bccaaa.json  ft_975828440bb9457df0a22cf0144f4b2d_sample_a8bda6926af613b146fb589b59844991.json  ft_9a63ff831332ab770f0ad1c2324ce52e_sample_41a8d1f439e1ed251753bdeace46dba3.json  ft_de48b0fef89e569b905f39b4e10a1f85_sample_ddaa8f53220c75b60d2dda9fec30fa58.json
